2001-11-02  Vince Darley  <vincentdarley@users.sourceforge.net>

	* doc/file.n:
	* generic/tclIOUtil.c: updated documentation and comments
	to clarify behaviour of 'file copy' wrt soft links.
	
2001-10-29  Vince Darley  <vincentdarley@users.sourceforge.net>

	* win/tclWinFile.c: fix to '-types {f r}' bug in
	TclpMatchInDirectory (which could cause a UMR, as well as
	returning wrong results).  Also improved API for 'stat'
	to resolve [Bug#219258].
	* win/tclWin32Dll.c
	* win/tclWinInt.h: addition of improved stat API to internal 
	lookup table.
	* tests/fileName.test: two new tests for the above bug.
	* generic/tclIOUtil.c: some cleanup of comments and #ifdefs
	
2001-10-29  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* unix/tclUnixFile.c (TclpMatchInDirectory): Argument to access()
	was entryPtr->d_name instead of nativeEntry which failed when
	trying to check access for files in other than the current
	directory. [Bug 475941, reported by Georgios Petasis]

2001-10-25  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* unix/tclUnixChan.c: Added stateUpdated member to struct TtyState.
	(TtyCloseProc,TtySetOptionProc,TtyInit): Use stateUpdated member
	of TtyState to decide whether it is necessary to reset a serial
	port when Tcl closes it.  Blindly resetting can cause Tcl to be
	sent an unexpected SIGTSTP when it is executing in the background
	[Bug 471374, reported by Chris Nelson]

2001-10-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net> 

	* doc/ObjectType.3: Minor documentation fix, reported by David
	  N. Welton <davidw@users.sourceforge.net> directly to me.

2001-10-22  Vince Darley  <vincentdarley@users.sourceforge.net>

	* win/tclWinFCmd.c: fix to stop test suite from hanging process
	under some versions of WinNT. [Bug #466102] (Kevin Kenny)
	
2001-10-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/clock.test (clock-8.1): 
	* generic/tclDate.c (RelativeMonth): 
	* generic/tclGetDate.y (RelativeMonth): corrected off-by-one-day