@@ -1,3 +1,9 @@
+2001-11-04  Vince Darley  <vincentdarley@users.sourceforge.net>
+
+	* library/init.tcl: made filesystem fallback proc
+	::tcl::CopyDirectory more robust to vagaries of non-native
+	filesystems.
+	
 2001-11-02  Vince Darley  <vincentdarley@users.sourceforge.net>
 
 	* doc/file.n:
